feat: add backwards compatibility (1.8.8+) and Folia support for all plugins
Add a cross-version compatibility layer in nimbus-sdk that all plugins use:
- SchedulerCompat: abstracts Bukkit vs Folia schedulers with entity-bound scheduling
- TextCompat: abstracts Adventure (Paper 1.16.5+) vs legacy ChatColor APIs
- VersionHelper: runtime detection of server capabilities (Folia, Adventure, etc.)

NimbusSDK: replace virtual threads with daemon threads, use reflection for
HttpClient.close(), convert records to classes for Java 8+ compat.

NimbusPerms: split ChatRenderer into Modern/LegacyChatHandler for
AsyncChatEvent vs AsyncPlayerChatEvent, use SchedulerCompat throughout.

NimbusDisplay: replace all Adventure API usage with TextCompat, add
PersistentDataContainer fallback to scoreboard tags, wrap modern-only
methods in try-catch.

Core: Folia services now only exclude ProtocolLib (SDK+Perms are compatible).

https://claude.ai/code/session_01FkMeGj9VW1JjgDvjUS5d3Q